# VierEenTwee

./: .gitignore  AggressiveStrategy.h  CMakeLists.txt  CarState.h  CarStateBroken.h  CarStateDamaged.h  CarStateFullHP.h  ChangeTyre.h  Colleague.h  Container.cpp  Container.h  CreateStrategy.h  DriverScore.h  DriversLeaderboard.h  EngDept.h  Leaderboard.h  Mediator.h  ModerateStrategy.h  PitCrew.h  README.md  RaceWeekend.h  RacingDep.h  RacingDept.h  SafeStrategy.h  Score.h  Simulator.h  TeamLeaderboard.h  main.cpp
src/: .gitignore  README.md  main.cpp  readme.txt
src/CarState/: CarState.cpp  CarStateBroken.cpp  CarStateDamaged.cpp  CarStateDamaged.h
src/eng/: BlueprintStore.cpp  BlueprintStore.h  Car.cpp  Car.h  ComponentSimulator.cpp  ComponentSimulator.h  EngTeam.cpp  EngTeam.h  Garage.cpp  Garage.h  WindTunnel.cpp  WindTunnel.h  patterns.md
src/eng/buildings/: BlueprintStore.cpp  BlueprintStore.h  ComponentSimulator.cpp  ComponentSimulator.h  Garage.cpp  Garage.h  WindTunnel.cpp  WindTunnel.h
src/eng/componentDevelopment/: Aggressive.cpp  Aggressive.h  Blueprint.cpp  Blueprint.h  Body.cpp  Body.h  BodyDep.cpp  BodyDep.h  Chassis.cpp  Chassis.h  ChassisDep.cpp  ChassisDep.h  Component.cpp  Component.h  Department.cpp  Department.h  ElectricDepartment.cpp  ElectricDepartment.h  ElectricHarness.cpp  ElectricHarness.h  ElectronicDep.cpp  ElectronicDep.h  Engine.cpp  Engine.h  EngineDep.cpp  EngineDep.h  MicroInitiationPlutoniumHammer.cpp  MicroInitiationPlutoniumHammer.h  MicroTimeTravelDep.cpp  MicroTimeTravelDep.h  Moderate.cpp  Moderate.h  Risk.h  Safe.cpp  Safe.h
src/eng/dev/: Agressive.cpp  Agressive.h  Blueprint.cpp  Body.cpp  Body.h  BodyDep.cpp  BodyDep.h  Chassis.cpp  Chassis.h  ChassisDep.cpp  ChassisDep.h  Component.cpp  Component.h  Department.cpp  Department.h  ElectricHarness.cpp  ElectricHarness.h  ElectronicDep.cpp  ElectronicDep.h  Engine.cpp  Engine.h  EngineDep.cpp  EngineDep.h  MicroInitiationPlutoniumHammer.cpp  MicroInitiationPlutoniumHammer.h  MicroTimeTravelDep.cpp  MicroTimeTravelDep.h  Moderate.cpp  Moderate.h  Risk.h  Safe.cpp  Safe.h
src/log/: Colleague.cpp  Colleague.h  EngDept.cpp  EngDept.h  Logistics.cpp  Logistics.h  Mediator.h  RacingDept.cpp  RacingDept.h  Strategy.cpp  Strategy.h  TrackComplexity.h  WeatherConditions.h  main.cpp  patterns.md
src/log/containers/: Box.cpp  Box.h  CateringEquipment.cpp  CateringEquipment.h  Container.cpp  Container.h  GarageEquipment.cpp  GarageEquipment.h
src/log/enums/: RiskLevel.h  TrackComplexity.h  WeatherConditions.h  randomisation.h
src/log/loose_glitter/: WorkToBeDone.txt  extras.txt
src/log/races/: ArrivedState.cpp  ArrivedState.h  BeingPackedState.cpp  BeingPackedState.h  Box.cpp  Box.h  CateringEquipment.cpp  CateringEquipment.h  Container.cpp  Container.h  ContainerState.cpp  ContainerState.h  GarageEquipment.cpp  GarageEquipment.h  InShippingState.cpp  InShippingState.h  Iterator.h  Race.cpp  Race.h  RaceIterator.cpp  RaceIterator.h  RacesList.cpp  RacesList.h  SetOfTyres.cpp  SetOfTyres.h  TyreBox.cpp  TyreBox.h  Tyres.cpp  Tyres.h  raceData.txt
src/log/racing/: Box.cpp  Box.h  ContainerState.h  Race.cpp  RacesList.cpp  raceData.txt
src/log/transportation/: Fly.cpp  Fly.h  Road.cpp  Road.h  Ship.cpp  Ship.h  TransportHandler.cpp  TransportHandler.h  TransportMethods.cpp  TransportMethods.h
src/people/: Amateur.cpp  Amateur.h  Driver.h  HireAmateur.h  HireProfessional.cpp  HireProfessional.h  KidnapStudent.cpp  Student.cpp  Student.h
src/ppl/: Driver.cpp  HireAmateur.cpp  HireAmateur.h  HireProfessional.cpp  HireProfessional.h  HumanResources.cpp  HumanResources.h  KidnapStudent.cpp  KidnapStudent.h  Person.cpp  Person.h  Professional.cpp  Professional.h  patterns.md
src/ppl/factories/: HireAmateur.cpp  HireAmateur.h  HireDriver.cpp  HireDriver.h  HirePitCrew.cpp  HirePitCrew.h  HireProfessional.cpp  HireProfessional.h  HireRacingDep.cpp  HireRacingDep.h  HireStrategist.cpp  HireStrategist.h  KidnapStudent.cpp  KidnapStudent.h
src/ppl/specialists/: Amateur.cpp  Amateur.h  Driver.cpp  Driver.h  Person.cpp  PitCrew.cpp  PitCrew.h  Professional.cpp  Professional.h  Strategist.cpp  Strategist.h  Student.cpp  Student.h
src/pr/: Doc.cpp  Doc.h
src/rce/: RaceDaysIterator.cpp  RaceDaysIterator.h  RaceWeekend.cpp  RaceWeekend.h  RacingDep.cpp  RacingDep.h  patterns.md
src/rce/CarState/: CarState.h
src/rce/carState/: CarState.cpp  CarState.h  CarStateBroken.cpp  CarStateBroken.h  CarStateDamaged.cpp  CarStateDamaged.h  CarStateFullHP.cpp  CarStateFullHP.h
src/rce/leaderboard/: DriverScore.cpp  DriverScore.h  DriversLeaderboard.cpp  DriversLeaderboard.h  Leaderboard.cpp  Leaderboard.h  Score.cpp  Score.h  TeamLeaderboard.cpp  TeamLeaderboard.h  delete.txt
src/rce/pitstop/: ChangeTyre.cpp  ChangeTyre.h  DriverPitStop.cpp  DriverPitStop.h  PitCrew.cpp  PitCrew.h  PitTeam.cpp  PitTeam.h  Pitstop.cpp  Pitstop.h  SetOfTyres.cpp  SetOfTyres.h  Tyres.cpp  Tyres.h
src/rce/simulator/: Simulator.cpp  Simulator.h  SimulatorHotCondition.cpp  SimulatorHotCondition.h  SimulatorNormalCondition.cpp  SimulatorNormalCondition.h  SimulatorWetCondition.cpp  SimulatorWetCondition.h
src/rce/strategy/: AggressiveStrategy.cpp  AggressiveStrategy.h  CreateStrategy.cpp  CreateStrategy.h  ModerateStrategy.cpp  ModerateStrategy.h  SafeStrategy.cpp  SafeStrategy.h
